# docker-fastapi

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
infra/python/: Dockerfile
src/: gunicorn.conf.py  pyproject.toml
src/project/: main.py
